Updates from Overleaf

--- a/Assignment3/overleaf/main.tex
+++ b/Assignment3/overleaf/main.tex
@@ -93,12 +93,12 @@
 
 
 
-% \begin{figure}
-%     \centering
-%     \includegraphics[width=\linewidth]{figures/boxplotDistributions.png}
-%     \caption{Boxplot representing the average waiting times for the multiple server configurations and service time distributions. The increment of servers reduces the waiting time as does the implementation of a deterministic service time distribution in comparison to the exponential distribution. The fat-tail distribution extended the on average waiting time ($\mu=2.5$ , $\rho=0.9$, $\lambda_1 = 2.25$, $\lambda_2 = 4.50$, $\lambda_4 = 9.00$, $N=5000$, $s=500$).}
-%     \label{fig:boxplotDistributions}
-% \end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{figures/testfigure.png}
+    \caption{Boxplot representing the average waiting times for the multiple server configurations and service time distributions. The increment of servers reduces the waiting time as does the implementation of a deterministic service time distribution in comparison to the exponential distribution. The fat-tail distribution extended the on average waiting time ($\mu=2.5$ , $\rho=0.9$, $\lambda_1 = 2.25$, $\lambda_2 = 4.50$, $\lambda_4 = 9.00$, $N=5000$, $s=500$).}
+    \label{fig:boxplotDistributions}
+\end{figure}
 
 
 \section{Discussion}
